--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -16,15 +16,20 @@
   </iocConfiguration>
   <microsoft.identityModel>
     <service>
+      <audienceUris>
+        <clear/>
+        <add value="http://localhost:8010/sts/"/>
+      </audienceUris>
       <issuerNameRegistry type="Microsoft.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, Microsoft.IdentityModel">
         <trustedIssuers>
           <clear/>
           <add thumbprint="3e07c011e0d76365af1391a3be7cda82eaf81d5a" name="CN=OSDevGrp.OSIntranet"/>
-        </trustedIssuers></issuerNameRegistry>
+        </trustedIssuers>
+      </issuerNameRegistry>
       <serviceCertificate>
         <certificateReference findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
       </serviceCertificate>
-      <certificateValidation certificateValidationMode="ChainTrust"/>
+      <certificateValidation certificateValidationMode="None"/>
     </service>
   </microsoft.identityModel>
   <basicSecurityTokenServiceConfiguration>
@@ -92,7 +97,7 @@
         <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
             <message negotiateServiceCredential="false" issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
-              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc">
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding">
                 <identity>
                   <dns value="OSDevGrp.OSIntranet.Services"/>
                 </identity>
@@ -174,18 +179,31 @@
       <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteSystemDataService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCFoodWasteSystemDataServiceBehavior">
         <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
         <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
-      <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
+      <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.BasicSecurityTokenServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
       </service>
     </services>
     <client>
@@ -223,13 +241,24 @@
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
           <serviceCredentials>
-            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+            <serviceCertificate findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <clientCertificate>
               <authentication certificateValidationMode="PeerTrust"/>
             </clientCertificate>
+            <issuedTokenAuthentication certificateValidationMode="PeerTrust" allowUntrustedRsaIssuers="True">
+              <knownCertificates>
+                <clear/>
+                <add findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+              </knownCertificates>
+            </issuedTokenAuthentication>
           </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
+        </behavior>
+        <behavior name="OSDevGrp.OSIntranet.BasicSecurityTokenServiceBehavior">
+          <serviceMetadata httpGetEnabled="False"/>
+          <serviceDebug includeExceptionDetailInFaults="False"/>
+          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
