--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -18,6 +18,10 @@
 
   <microsoft.identityModel>
     <service>
+      <audienceUris>
+        <clear/>
+        <add value="http://localhost:8010/sts/"/>
+      </audienceUris>
       <issuerNameRegistry type="Microsoft.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, Microsoft.IdentityModel">
         <trustedIssuers>
           <clear/>
@@ -27,7 +31,7 @@
       <serviceCertificate>
         <certificateReference findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
       </serviceCertificate>
-      <certificateValidation certificateValidationMode="ChainTrust"/>
+      <certificateValidation certificateValidationMode="None"/>
     </service>
   </microsoft.identityModel>
 
@@ -86,7 +90,7 @@
         <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
             <message negotiateServiceCredential="false" issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
-              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc">
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding">
                 <identity>
                   <dns value="OSDevGrp.OSIntranet.Services"/>
                 </identity>
@@ -96,6 +100,18 @@
                   <dns value="OSDevGrp.OSIntranet.Services"/>
                 </identity>
               </issuerMetadata>
+              <tokenRequestParameters>
+                <trust:SecondaryParameters xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">
+                  <trust:TokenType xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1</trust:TokenType>
+                  <trust:KeyType xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://docs.oasis-open.org/ws-sx/ws-trust/200512/SymmetricKey</trust:KeyType>
+                  <trust:KeySize xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">256</trust:KeySize>
+                  <trust:KeyWrapAlgorithm xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p</trust:KeyWrapAlgorithm>
+                  <trust:EncryptWith xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://www.w3.org/2001/04/xmlenc#aes256-cbc</trust:EncryptWith>
+                  <trust:SignWith xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://www.w3.org/2000/09/xmldsig#hmac-sha1</trust:SignWith>
+                  <trust:CanonicalizationAlgorithm xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://www.w3.org/2001/10/xml-exc-c14n#</trust:CanonicalizationAlgorithm>
+                  <trust:EncryptionAlgorithm xmlns:trust="http://docs.oasis-open.org/ws-sx/ws-trust/200512">http://www.w3.org/2001/04/xmlenc#aes256-cbc</trust:EncryptionAlgorithm>
+                </trust:SecondaryParameters>
+              </tokenRequestParameters>
             </message>
           </security>
         </binding>
@@ -169,18 +185,31 @@
       <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteSystemDataService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCFoodWasteSystemDataServiceBehavior">
         <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
         <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
-            <dns value="OSDevGrp.OSIntranet.Services"/>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
-      <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract"/>
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract"/>
+      <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.BasicSecurityTokenServiceBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
       </service>
     </services>
     <client>
@@ -206,7 +235,7 @@
       </endpoint>
       <endpoint name="FoodWasteSystemDataServiceIntegrationstest" address="http://localhost/osintranetdev/foodwastesystemdataservice.svc" behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
         <identity>
-          <dns value="OSDevGrp.OSIntranet.Services"/>
+          <dns value="OSDevGrp.OSIntranet.Tokens"/>
         </identity>
       </endpoint>
       <endpoint name="AdresseRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService"/>
@@ -231,13 +260,24 @@
           <serviceMetadata httpGetEnabled="True"/>
           <serviceDebug includeExceptionDetailInFaults="True"/>
           <serviceCredentials>
-            <serviceCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+            <serviceCertificate findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <clientCertificate>
               <authentication certificateValidationMode="PeerTrust"/>
             </clientCertificate>
+            <issuedTokenAuthentication certificateValidationMode="PeerTrust" allowUntrustedRsaIssuers="True">
+              <knownCertificates>
+                <clear/>
+                <add findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
+              </knownCertificates>
+            </issuedTokenAuthentication>
           </serviceCredentials>
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
+        </behavior>
+        <behavior name="OSDevGrp.OSIntranet.BasicSecurityTokenServiceBehavior">
+          <serviceMetadata httpGetEnabled="False"/>
+          <serviceDebug includeExceptionDetailInFaults="True"/>
+          <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
@@ -245,14 +285,23 @@
           <clientCredentials>
             <clientCertificate findValue="OSDevGrp.OSIntranet.Clients" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName"/>
             <serviceCertificate>
-              <defaultCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+              <!--defaultCertificate findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/-->
+              <scopedCertificates>
+                <clear/>
+                <add targetUri="http://localhost/osintranetdev/basicsecuritytokenservice.svc" findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add targetUri="http://localhost/osintranetdev/adressekartotekservice.svc" findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add targetUri="http://localhost/osintranetdev/finansstyringservice.svc" findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add targetUri="http://localhost/osintranetdev/kalenderservice.svc" findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add targetUri="http://localhost/osintranetdev/commonservice.svc" findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                <add targetUri="http://localhost/osintranetdev/foodwastesystemdataservice.svc" findValue="OSDevGrp.OSIntranet.Tokens" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+              </scopedCertificates>
               <authentication certificateValidationMode="PeerTrust"/>
             </serviceCertificate>
           </clientCredentials>
         </behavior>
         <behavior name="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior">
           <dataContractSerializer maxItemsInObjectGraph="2097152"/>
-          <callbackTimeouts transactionTimeout="00:03:00"/>
+          <callbackTimeouts transactionTimeout="00:05:00"/>
         </behavior>
       </endpointBehaviors>
     </behaviors>
